# craftinginterpreters-clox

./: CMakeLists.txt  README.md  chunk.c  chunk.h  debug.c  main.c  memory.c  memory.h  value.c
main/: chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  debug.h  main.c  memory.c  memory.h  object.c  object.h  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h
tests/assignment/: assoc.lox
tests/closure/: weird.lox
tests/errors/: improper_assignment
tests/recursion/: success.lox
